fix(style): change the code icon position and remove the overflow-y

--- a/src/style/component/form.css
+++ b/src/style/component/form.css
@@ -89,10 +89,6 @@ legend div {
   }
 }
 .content {
-  margin: 0.5rem 1rem;
-}
-.content {
-  width: calc(100% - 40px);
   max-width: 1280px;
   margin-left: auto;
   margin-right: auto;
