--- a/src/style/component/icon.css
+++ b/src/style/component/icon.css
@@ -1,3 +1,6 @@
 svg {
   vertical-align: middle;
 }
+i {
+  cursor: pointer;
+}
